change eagle to trukker

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eagle-client",
+  "name": "trukker-client",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "Coen Mooij <coenmooij@gmail.com>",
