--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "vee-validate": "^2.0.0-rc.9",
     "vue": "^2.3.3",
-    "vue-router": "^2.6.0"
+    "vue-resource": "^1.3.4",
+    "vue-router": "^2.6.0",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
