--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "moment": "^2.18.1",
     "vee-validate": "^2.0.0-rc.9",
     "vue": "^2.3.3",
     "vue-resource": "^1.3.4",
